tests/snapshots/yaml_suite_snapshots__yaml_suite_5GBF_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 6.5. Empty Lines
  from: "http://www.yaml.org/spec/1.2/spec.html#id2778971"
  tags: double literal spec scalar upto-1.2 whitespace
  yaml: "Folding:\n  \"Empty line\n   »\n  as a line feed\"\nChomping: |\n  Clipped empty lines\n␣\n↵\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :Folding\n   =VAL \"Empty line\\nas a line feed\n   =VAL :Chomping\n   =VAL |Clipped empty lines…"
  json: "{\n  \"Folding\": \"Empty line\\nas a line feed\",\n  \"Chomping\": \"Clipped empty lines\\n\"\n}\n"
  dump: "Folding: \"Empty line\\nas a line feed\"\nChomping: |\n  Clipped empty lines\n"
