tests/snapshots/yaml_suite_snapshots__yaml_suite_5KJE_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 7.13. Flow Sequence
  from: "http://www.yaml.org/spec/1.2/spec.html#id2790506"
  tags: spec flow sequence
  yaml: "- [ one, two, ]\n- [three ,four]\n"
  tree: "+STR\n +DOC\n  +SEQ\n   +SEQ []\n    =VAL :one\n    =VAL :two\n   -SEQ\n   +SEQ []\n    =VAL :three\n    =VAL :four\n   -SEQ\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  [\n    \"one\",\n    \"two\"\n  ],\n  [\n    \"three\",\n    \"four\"\n  ]\n]\n"
  dump: "- - one\n  - two\n- - three\n  - four\n"
