tests/snapshots/yaml_suite_snapshots__yaml_suite_5KJE_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "- - one\n  - two\n- - three\n  - four\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2790506"
  json: "[\n  [\n    \"one\",\n    \"two\"\n  ],\n  [\n    \"three\",\n    \"four\"\n  ]\n]\n"
  name: Spec Example 7.13. Flow Sequence
  tags: spec flow sequence
  tree: "+STR\n +DOC\n  +SEQ\n   +SEQ []\n    =VAL :one\n    =VAL :two\n   -SEQ\n   +SEQ []\n    =VAL :three\n    =VAL :four\n   -SEQ\n  -SEQ\n -DOC\n-STR\n"
  yaml: "- [ one, two, ]\n- [three ,four]\n"
