tests/snapshots/yaml_suite_snapshots__yaml_suite_5LLU_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Block scalar with wrong indented line after spaces only
  from: "@perlpunk"
  tags: error folded whitespace
  fail: true
  yaml: "block scalar: >\n␣\n␣␣\n␣␣␣\n invalid\n"
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :block scalar\n"
