tests/snapshots/yaml_suite_snapshots__yaml_suite_5LLU_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- fail: true
  from: "@perlpunk"
  name: Block scalar with wrong indented line after spaces only
  tags: error folded whitespace
  tree: "+STR\n +DOC\n  +MAP\n   =VAL :block scalar\n"
  yaml: "block scalar: >\n␣\n␣␣\n␣␣␣\n invalid\n"
