tests/snapshots/yaml_suite_snapshots__yaml_suite_5MUD_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Colon and adjacent value on next line
  from: "@perlpunk"
  tags: double flow mapping
  yaml: "---\n{ \"foo\"\n  :bar }\n"
  tree: "+STR\n +DOC ---\n  +MAP {}\n   =VAL \"foo\n   =VAL :bar\n  -MAP\n -DOC\n-STR\n"
  json: "{\n  \"foo\": \"bar\"\n}\n"
  dump: "---\n\"foo\": bar\n"
