tests/snapshots/yaml_suite_snapshots__yaml_suite_5MUD_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "---\n\"foo\": bar\n"
  from: "@perlpunk"
  json: "{\n  \"foo\": \"bar\"\n}\n"
  name: Colon and adjacent value on next line
  tags: double flow mapping
  tree: "+STR\n +DOC ---\n  +MAP {}\n   =VAL \"foo\n   =VAL :bar\n  -MAP\n -DOC\n-STR\n"
  yaml: "---\n{ \"foo\"\n  :bar }\n"
